# habit-agent

./: .gitignore  Dockerfile.backend  LICENSE  README.md  docker-compose.yml  habit_tracker_blueprint.md  pyproject.toml  todo.md
.github/workflows/: ci.yml
app/: main.py  models.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/pages/: index.tsx
frontend/pages/__tests__/: index.test.tsx
scripts/: format.sh
tests/: conftest.py  test_health.py  test_models.py
